<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">爱密码</string>
    <string name="lockscreen_access_pattern_start">开始绘制图案</string>
    <string name="lockscreen_access_pattern_cleared">图案已清除</string>
    <string name="lockscreen_access_pattern_cell_added">已添加单元格</string>
    <string name="lockscreen_access_pattern_detected">图案绘制完成</string>
    <string name="lockpattern_retry_button_text">重试</string>
    <string name="lockpattern_continue_button_text">继续</string>
    <string name="lockpattern_confirm_button_text">确认</string>
    <string name="lockpattern_recording_intro_header">绘制解锁图案</string>
    <string name="lockpattern_settings_help_how_to_record">如何绘制解锁图案</string>
    <string name="lockpattern_recording_incorrect_too_short">至少连接4个点，请重试</string>
    <string name="lockpattern_pattern_entered_header">图案已记录</string>
    <string name="lockpattern_need_to_confirm">请再次绘制解锁图案</string>
    <string name="lockpattern_need_to_unlock_wrong">与上次输入不一致，请重试</string>
    <string name="lockpattern_pattern_confirmed_header">确认保存新解锁图案</string>
    <string name="lockpattern_recording_inprogress">完成后松开手指</string>
    <string name="gesture_password_guide_text">请先创建一个解锁图案，这样他人在借用你的手机时，将无法打开密码助手。</string>
    <string name="gesture_password_guide_creat_btn">创建手势密码</string>
    <string name="draw_figtion_password">请绘制手势密码</string>
    <string name="verify_figtion_password">验证手势密码</string>
    <string name="five_wrong_retry">5次失败后，需要重新登录。</string>
    <string name="forget_password">忘记密码</string>
    <string name="draw_unlock_map">绘制解锁图案</string>
    <string name="gesturepassword_retry">重绘</string>
    <string name="gesturepassword_save">保存</string>
    
    <!-- btn_value -->
    <string name="string_ok">确定</string>
    <string name="string_cancel">取消</string>
    <string name="string_add_item">添加您的密码和账号</string>
    
    <!-- textview_value -->
    <string name="string_noitem_note">您暂时还没有记录任何密码！</string>
    <string name="email_address_label">备份的邮箱地址</string>
    <string name="command_label">密码口令</string>
    <string name="modify_lockpattern_label">修改手势密码</string>
    <string name="textview_copy">复制</string>
    <string name="textview_account">账        号</string>
    <string name="textview_password">密        码</string>
    <string name="textview_about">关于我们</string>
    <string name="command_back">口令验证找回</string>
    <string name="account_back">存储的账号找回</string>
    
    <!-- manage center -->
    <string name="add_label">添加账号和密码记录</string>
    <string name="add_note">添加私密日志</string>
    <string name="app_list">打开应用列表</string>
    
    <!-- personal center -->
    <string name="cloud_label">备份到我的私人邮箱</string>
    <string name="settting_label">设置</string>
    <string name="recovery_label">恢复原来的数据</string>
    <string name="touxiang_label">头像</string>
    <string name="nickname_label">昵称</string>
    <string name="nickname_value">Listener</string>
    <string name="default_account">账号: 1247983646</string>
    
    <!-- add layout -->
    <string name="text_type">账号类型</string>
    <string name="text_name">昵称</string>
    <string name="text_username">账号</string>
    <string name="text_password">密码</string>
    <string name="text_url">链接(url)</string>
    <string name="text_comment">备注</string>
    <string name="text_question1">密保1</string>
    <string name="text_question2">密保2</string>
    <string name="text_title">标题</string>
    <string name="text_content">正文</string>
    
    <string name="name_hint">请输入昵称……</string>
    <string name="username_hint">请输入账号……</string>
    <string name="password_hint">请输入密码……</string>
    <string name="url_hint">请输入登录网址……</string>
    <string name="comment_hint">请为此账号信息填写备注……</string>
    <string name="question1_hint">输入密保问题答案……</string>
    <string name="question2_hint">输入密保问题答案……</string>
    <string name="search_bar_hint">请输入您要搜索的关键字</string>
    <string name="search_app_hint">请输入您要搜索的应用名称</string>
    <string name="email_hint">输入你的邮箱地址……</string>
    <string name="group_name_hint">输入一个分组名……</string>
    <string name="content_hint">请在此处编辑正文内容……</string>
    
    <!-- dialog -->
    <string name="back">返回</string>
    <string name="submit">保存</string>
    
    <!-- type strings -->
    <string name="group_default">默认分组</string>
    <string name="group_bank">银行卡密码</string>
    <string name="group_web">网站密码</string>
    <string name="group_weibo">微博密码</string>
    <string name="group_qq">QQ密码</string>
    <string name="group_email">邮箱密码</string>
    <string name="group_alipay">支付宝密码</string>
    
    <!-- sub type strings -->
    <string name="cash_card">储蓄卡</string>
    <string name="credit_card">信用卡</string>
    
    <!-- titles -->
    <string name="add_title">添加账号和密码</string>
    <string name="detail_title">密码详情</string>
    <string name="settings_title">设置</string>
    <string name="set_command_title">设置密码口令</string>
    <string name="set_email_title">邮箱账号</string>
    <string name="add_group_title">添加分组</string>
    <string name="edit_title">修改密码信息</string>
    <string name="personal_info">个人信息</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="about_title">关于我们</string>
    <string name="add_note_title">添加私密记事</string>
    <string name="applist_title">本地应用列表</string>
    <string name="password_back_title">找回手势密码</string>

    <!-- description for images -->
    <string name="return_desc">返回上层页面</string>
    
    <!-- author -->
    <string name="author">Listener</string>
    
    <!-- email related -->
    <string name="email_host">smtp.163.com</string>
    <string name="email_port">25</string>
    <string name="email_subject">来自密码助手的数据备份</string>
    <string name="email_content">此邮件由您的密码助手APP发出，附件是您的密码数据备份文件（数据信息已加密），请妥善保管，以便您更换手机或丢失手机后恢复您的数据！</string>
    <string name="email_user">pwhelper@163.com</string>
    <string name="email_password">rmnjyhtcaowbpnma</string>
    
</resources>
