<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/top_layout1" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadingEdge="vertical"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:background="@drawable/layout_background"
            android:orientation="vertical"
            android:padding="20dip" >

            <LinearLayout
                android:id="@+id/item1"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:layout_marginTop="8.0dip"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/text_type"
                    android:layout_width="fill_parent"
                    android:layout_height="30dip"
                    android:layout_marginLeft="6dip"
                    android:layout_weight="8"
                    android:text="@string/text_type"
                    android:textColor="#606366"
                    android:textSize="@dimen/addActivity_label" />

                <Spinner
                    android:id="@+id/edit_type"
                    android:layout_width="fill_parent"
                    android:layout_height="30dip"
                    android:layout_marginRight="6dip"
                    android:layout_weight="4"
                    android:background="@drawable/rounded_edittext"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item9"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:layout_marginTop="8.0dip"
                android:orientation="horizontal" >
                <View
			        android:id="@id/gesturepwd_creat_gap1"
			        android:layout_width="fill_parent"
			        android:layout_height="30.0dip"
			        android:layout_marginLeft="6dip"
			        android:layout_weight="8" />
                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="fill_parent"
                    android:layout_height="30dip"
                    android:layout_weight="4"
                    android:contentDescription="@null"
                    android:orientation="horizontal" >
                    <RadioButton
                        android:id="@+id/radioCash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/cash_card" >
                    </RadioButton>
                    <RadioButton
                        android:id="@+id/radioCredit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/credit_card" >
                    </RadioButton>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item2"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:layout_marginTop="8.0dip"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/text_name"
                    android:layout_width="fill_parent"
                    android:layout_height="30dip"
                    android:layout_marginLeft="6dip"
                    android:layout_weight="8"
                    android:text="@string/text_name"
                    android:textColor="#606366"
                    android:textSize="@dimen/addActivity_label" />

                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="fill_parent"
                    android:layout_height="30dip"
                    android:layout_marginRight="6dip"
                    android:layout_weight="4"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/name_hint"
                    android:paddingLeft="6dip"
                    android:textSize="@dimen/addActivity_edit" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item3"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:layout_marginTop="8.0dip"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/text_username"
                    android:layout_width="fill_parent"
                    android:layout_height="30dip"
                    android:layout_marginLeft="6dip"
                    android:layout_weight="8"
                    android:text="@string/text_username"
                    android:textColor="#606366"
                    android:textSize="@dimen/addActivity_label" />

                <EditText
                    android:id="@+id/edit_username"
                    android:layout_width="fill_parent"
                    android:layout_height="30dip"
                    android:layout_marginRight="6dip"
                    android:layout_weight="4"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/username_hint"
                    android:paddingLeft="6dip"
                    android:textSize="@dimen/addActivity_edit" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item4"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:layout_marginTop="8.0dip"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/text_password"
                    android:layout_width="fill_parent"
                    android:layout_height="30dip"
                    android:layout_marginLeft="6dip"
                    android:layout_weight="8"
                    android:text="@string/text_password"
                    android:textColor="#606366"
                    android:textSize="@dimen/addActivity_label" />

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="fill_parent"
                    android:layout_height="30dip"
                    android:layout_marginRight="6dip"
                    android:layout_weight="4"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:paddingLeft="6dip"
                    android:textSize="@dimen/addActivity_edit" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item5"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:layout_marginTop="8.0dip"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/text_url"
                    android:layout_width="fill_parent"
                    android:layout_height="30dip"
                    android:layout_marginLeft="6dip"
                    android:layout_weight="8"
                    android:text="@string/text_url"
                    android:textColor="#606366"
                    android:textSize="@dimen/addActivity_label" />

                <EditText
                    android:id="@+id/edit_url"
                    android:layout_width="fill_parent"
                    android:layout_height="30dip"
                    android:layout_marginRight="6dip"
                    android:layout_weight="4"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/url_hint"
                    android:inputType="textUri"
                    android:paddingLeft="6dip"
                    android:textSize="@dimen/addActivity_edit" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item6"
                android:layout_width="fill_parent"
                android:layout_height="80.0dip"
                android:layout_marginTop="8.0dip"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/text_comment"
                    android:layout_width="fill_parent"
                    android:layout_height="30dip"
                    android:layout_marginLeft="6dip"
                    android:layout_weight="8"
                    android:text="@string/text_comment"
                    android:textColor="#606366"
                    android:textSize="@dimen/addActivity_label" />

                <EditText
                    android:id="@+id/edit_comment"
                    android:layout_width="fill_parent"
                    android:layout_height="60dip"
                    android:layout_marginRight="6dip"
                    android:layout_weight="4"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/comment_hint"
                    android:paddingLeft="6dip"
                    android:textSize="@dimen/addActivity_edit" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item7"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:layout_marginTop="8.0dip"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/text_question1"
                    android:layout_width="fill_parent"
                    android:layout_height="30dip"
                    android:layout_marginLeft="6dip"
                    android:layout_weight="8"
                    android:text="@string/text_question1"
                    android:textColor="#606366"
                    android:textSize="@dimen/addActivity_label" />

                <EditText
                    android:id="@+id/edit_question1"
                    android:layout_width="fill_parent"
                    android:layout_height="30dip"
                    android:layout_marginRight="6dip"
                    android:layout_weight="4"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/question1_hint"
                    android:paddingLeft="6dip"
                    android:textSize="@dimen/addActivity_edit" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item8"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:layout_marginTop="8.0dip"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/text_question2"
                    android:layout_width="fill_parent"
                    android:layout_height="30dip"
                    android:layout_marginLeft="6dip"
                    android:layout_weight="8"
                    android:text="@string/text_question2"
                    android:textColor="#606366"
                    android:textSize="@dimen/addActivity_label" />

                <EditText
                    android:id="@+id/edit_question2"
                    android:layout_width="fill_parent"
                    android:layout_height="30dip"
                    android:layout_marginRight="6dip"
                    android:layout_weight="4"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/question2_hint"
                    android:paddingLeft="6dip"
                    android:textSize="@dimen/addActivity_edit" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:gravity="center" >

                <Button
                    android:id="@+id/Edit_Submit"
                    android:layout_width="110dip"
                    android:layout_height="35dip"
                    android:background="@drawable/rounded_button"
                    android:text="@string/submit"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/addActivity_edit" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>