<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/top_layout1" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadingEdge="vertical"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:background="@drawable/layout_background"
            android:orientation="vertical"
            android:padding="20dip" >
    
            <LinearLayout
                android:id="@+id/item3"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:layout_marginTop="8.0dip"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/text_title"
                    android:layout_width="fill_parent"
                    android:layout_height="30dip"
                    android:layout_marginLeft="6dip"
                    android:layout_weight="8"
                    android:text="@string/text_title"
                    android:textColor="@color/font_color"
                    android:textSize="@dimen/addActivity_label" />

                <EditText
                    android:id="@+id/edit_title"
                    android:layout_width="fill_parent"
                    android:layout_height="30dip"
                    android:layout_marginRight="6dip"
                    android:layout_weight="4"
                    android:background="@drawable/bg_edittext"
                    android:textColorHint="#AAAAAA"
                    android:hint="@string/username_hint"
                    android:paddingLeft="6dip"
                    android:textSize="@dimen/addActivity_edit" />
            </LinearLayout>

            <!-- comment -->
            <LinearLayout
                android:id="@+id/item6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8.0dip"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/text_content"
                    android:layout_width="fill_parent"
                    android:layout_height="30dip"
                    android:layout_marginLeft="6dip"
                    android:layout_weight="8"
                    android:text="@string/text_content"
                    android:textColor="@color/font_color"
                    android:textSize="@dimen/addActivity_label" />

                <EditText
                    android:id="@+id/edit_content"
                    android:inputType="textMultiLine"
                    android:layout_width="fill_parent"
                    android:layout_height="120dip"
                    android:layout_marginRight="6dip"
                    android:layout_weight="4"
                    android:background="@drawable/bg_edittext"
                    android:textColorHint="#AAAAAA"
                    android:hint="@string/content_hint"
                    android:paddingLeft="6dip"
                    android:textSize="@dimen/addActivity_edit" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:gravity="center" >
                <Button
                    android:id="@+id/Dlg_Submit"
                    android:layout_width="110dip"
                    android:layout_height="35dip"
                    android:background="@drawable/rounded_button_common"
                    android:text="@string/submit"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/addActivity_edit" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>