<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/item1"
        android:layout_width="fill_parent"
        android:layout_height="60.0dip"
        android:layout_marginTop="8.0dip"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/text_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_name"
            android:textColor="#00f"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/item2"
        android:layout_width="fill_parent"
        android:layout_height="60.0dip"
        android:layout_marginTop="8.0dip"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/text_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_password"
            android:textColor="#00f"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/item3"
        android:layout_width="fill_parent"
        android:layout_height="60.0dip"
        android:layout_marginTop="8.0dip"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/text_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_type"
            android:textColor="#00f"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edit_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="" />
    </LinearLayout>
 
    <LinearLayout
        android:id="@+id/item4"
        android:layout_width="fill_parent"
        android:layout_height="60.0dip"
        android:layout_marginTop="8.0dip"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/text_url"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_url"
            android:textColor="#00f"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edit_url"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/item5"
        android:layout_width="fill_parent"
        android:layout_height="60.0dip"
        android:layout_marginTop="8.0dip"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/text_commit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_commit"
            android:textColor="#00f"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edit_commit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/item6"
        android:layout_width="fill_parent"
        android:layout_height="60.0dip"
        android:layout_marginTop="8.0dip"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/text_question1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_question1"
            android:textColor="#00f"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edit_question1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item7"
        android:layout_width="fill_parent"
        android:layout_height="60.0dip"
        android:layout_marginTop="8.0dip"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/text_question2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_question2"
            android:textColor="#00f"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edit_question2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="" />
    </LinearLayout>
</LinearLayout>