<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <include layout="@layout/layout_user_info_top" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15.0dip"
        android:orientation="vertical"
        android:background="#FFFFFF" >
        <RelativeLayout
            android:id="@+id/touxiang_line"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true">
            <TextView
                android:id="@+id/touxiang_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15.0dip"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/touxiang_label"
                android:layout_toRightOf="@+id/recovery_icon"
                android:textColor="#ff787878"
                android:textSize="18.0dip" />
            <com.lxm.pwhelp.custom.CircleImageView
	           android:id="@+id/touxiang_picture"
	           android:layout_width="60dip"
	           android:layout_height="60dip"
	           android:layout_marginRight="15.0dip"
	           android:layout_marginTop="15.0dip"
	           android:layout_marginBottom="15.0dip"
	           android:layout_alignParentRight="true"
               android:layout_centerVertical="true"
	           android:src="@drawable/head_icon"
	           android:contentDescription="@null" />
        </RelativeLayout>
        
        <View 
            android:layout_width="fill_parent"
            android:layout_height="0.8dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="#d2d2d2"/>

        <RelativeLayout
            android:id="@+id/nickname_line"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:clickable="true">

            <TextView
                android:id="@+id/nickname_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15.0dip"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:text="@string/nickname_label"
                android:textColor="#ff787878"
                android:textSize="18.0dip"/>
            <TextView
                android:id="@+id/nickname_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15.0dip"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:text="@string/nickname_value"
                android:textColor="#ff787878"
                android:textSize="18.0dip"/>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>